--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
+
+.list-movies{
+display: flex;
+
+
+}
+
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -36,3 +44,4 @@
     transform: rotate(360deg);
   }
 }
+ */
